--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ca.uwaterloo.iss4e</groupId>
-    <artifactId>parx</artifactId>
+    <artifactId>anomalydetect</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency> <!-- Spark dependency -->
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
-            <version>1.4.0</version>
+            <artifactId>spark-core_2.10</artifactId>
+            <version>1.5.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming_2.11</artifactId>
-            <version>1.4.0</version>
+            <artifactId>spark-streaming_2.10</artifactId>
+            <version>1.5.2</version>
         </dependency>
         <dependency>
             <groupId>gov.nist.math</groupId>
