--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ca.uwaterloo.iss4e</groupId>
-    <artifactId>anomalydetect</artifactId>
+    <artifactId>AnomalyDetection</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
